--- a/SpotOnChallenge/Base.lproj/Main.storyboard
+++ b/SpotOnChallenge/Base.lproj/Main.storyboard
@@ -37,25 +37,48 @@
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="tCp-Ll-BkS">
                                 <rect key="frame" x="0.0" y="27" width="414" height="896"/>
                             </mapView>
+                            <view alpha="0.80000000000000004" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hDa-Ye-jbM">
+                                <rect key="frame" x="20" y="800" width="374" height="72"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No address" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vbR-Q9-Tpw">
+                                        <rect key="frame" x="5" y="23.5" width="364" height="25.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="21"/>
+                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="vbR-Q9-Tpw" firstAttribute="centerY" secondItem="hDa-Ye-jbM" secondAttribute="centerY" id="H2S-DP-KQO"/>
+                                    <constraint firstItem="vbR-Q9-Tpw" firstAttribute="centerX" secondItem="hDa-Ye-jbM" secondAttribute="centerX" id="Kuq-mY-19D"/>
+                                    <constraint firstItem="vbR-Q9-Tpw" firstAttribute="leading" secondItem="hDa-Ye-jbM" secondAttribute="leading" constant="5" id="m4I-Wr-Iwy"/>
+                                    <constraint firstAttribute="trailing" secondItem="vbR-Q9-Tpw" secondAttribute="trailing" constant="5" id="sY1-Df-z7W"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="hDa-Ye-jbM" firstAttribute="bottom" secondItem="VUw-jc-0yf" secondAttribute="bottom" constant="10" id="AwT-ZU-hpp"/>
+                            <constraint firstItem="VUw-jc-0yf" firstAttribute="trailing" secondItem="hDa-Ye-jbM" secondAttribute="trailing" constant="20" id="DjJ-Zs-W2M"/>
                             <constraint firstItem="tCp-Ll-BkS" firstAttribute="centerY" secondItem="VUw-jc-0yf" secondAttribute="centerY" id="b05-aC-vXc"/>
                             <constraint firstItem="tCp-Ll-BkS" firstAttribute="width" secondItem="svH-Pt-448" secondAttribute="width" id="drK-TU-buI"/>
                             <constraint firstItem="tCp-Ll-BkS" firstAttribute="height" secondItem="svH-Pt-448" secondAttribute="height" id="gjC-jT-ZMD"/>
                             <constraint firstItem="tCp-Ll-BkS" firstAttribute="centerX" secondItem="VUw-jc-0yf" secondAttribute="centerX" id="r74-Rz-cm4"/>
+                            <constraint firstItem="hDa-Ye-jbM" firstAttribute="leading" secondItem="VUw-jc-0yf" secondAttribute="leading" constant="20" id="rGV-8n-hLo"/>
+                            <constraint firstItem="hDa-Ye-jbM" firstAttribute="top" secondItem="VUw-jc-0yf" secondAttribute="top" constant="712" id="xVi-MI-Wrf"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="VUw-jc-0yf"/>
                     </view>
                     <toolbarItems/>
                     <navigationItem key="navigationItem" title="Restaurant Detail" id="mOI-FS-AaM"/>
                     <connections>
+                        <outlet property="addressLabel" destination="vbR-Q9-Tpw" id="oaV-KU-cgN"/>
                         <outlet property="map" destination="tCp-Ll-BkS" id="7QN-CO-eK9"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FJe-Yq-33r" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="709" y="129"/>
+            <point key="canvasLocation" x="708.69565217391312" y="128.57142857142856"/>
         </scene>
         <!--Split View Controller-->
         <scene sceneID="Nki-YV-4Qg">
